clients/include/rocblas_fortran.hpp

rocblas_status rocblas_idamin_batched_fortran(rocblas_handle      handle,
                                              rocblas_int         n,
                                              const double* const x[],
                                              rocblas_int         incx,
                                              rocblas_int         batch_count,
                                              rocblas_int*        result);
rocblas_status rocblas_icamin_batched_fortran(rocblas_handle                     handle,
                                              rocblas_int                        n,
                                              const rocblas_float_complex* const x[],
                                              rocblas_int                        incx,
                                              rocblas_int                        batch_count,
                                              rocblas_int*                       result);
rocblas_status rocblas_izamin_batched_fortran(rocblas_handle                      handle,
                                              rocblas_int                         n,
                                              const rocblas_double_complex* const x[],
                                              rocblas_int                         incx,
                                              rocblas_int                         batch_count,
                                              rocblas_int*                        result);
// amin_strided_batched
rocblas_status rocblas_isamin_strided_batched_fortran(rocblas_handle handle,
                                                      rocblas_int    n,
                                                      const float*   x,
                                                      rocblas_int    incx,
                                                      rocblas_stride stridex,
                                                      rocblas_int    batch_count,
                                                      rocblas_int*   result);
rocblas_status rocblas_idamin_strided_batched_fortran(rocblas_handle handle,
                                                      rocblas_int    n,
                                                      const double*  x,
                                                      rocblas_int    incx,
                                                      rocblas_stride stridex,
                                                      rocblas_int    batch_count,
                                                      rocblas_int*   result);
rocblas_status rocblas_icamin_strided_batched_fortran(rocblas_handle               handle,
                                                      rocblas_int                  n,
                                                      const rocblas_float_complex* x,
                                                      rocblas_int                  incx,
                                                      rocblas_stride               stridex,
                                                      rocblas_int                  batch_count,
                                                      rocblas_int*                 result);
rocblas_status rocblas_izamin_strided_batched_fortran(rocblas_handle                handle,
                                                      rocblas_int                   n,
                                                      const rocblas_double_complex* x,
                                                      rocblas_int                   incx,
                                                      rocblas_stride                stridex,
                                                      rocblas_int                   batch_count,
                                                      rocblas_int*                  result);
// rot
rocblas_status rocblas_srot_fortran(rocblas_handle handle,
                                    rocblas_int    n,
                                    float*         x,
                                    rocblas_int    incx,
                                    float*         y,
                                    rocblas_int    incy,
                                    const float*   c,
                                    const float*   s);
rocblas_status rocblas_drot_fortran(rocblas_handle handle,
                                    rocblas_int    n,
                                    double*        x,
                                    rocblas_int    incx,
                                    double*        y,
                                    rocblas_int    incy,
                                    const double*  c,
                                    const double*  s);
rocblas_status rocblas_crot_fortran(rocblas_handle               handle,
                                    rocblas_int                  n,
                                    rocblas_float_complex*       x,
                                    rocblas_int                  incx,
                                    rocblas_float_complex*       y,
                                    rocblas_int                  incy,
                                    const float*                 c,
                                    const rocblas_float_complex* s);
rocblas_status rocblas_csrot_fortran(rocblas_handle         handle,
                                     rocblas_int            n,
                                     rocblas_float_complex* x,
                                     rocblas_int            incx,
                                     rocblas_float_complex* y,
                                     rocblas_int            incy,
                                     const float*           c,
                                     const float*           s);
rocblas_status rocblas_zrot_fortran(rocblas_handle                handle,
                                    rocblas_int                   n,
                                    rocblas_double_complex*       x,
                                    rocblas_int                   incx,
                                    rocblas_double_complex*       y,
                                    rocblas_int                   incy,
                                    const double*                 c,
                                    const rocblas_double_complex* s);
rocblas_status rocblas_zdrot_fortran(rocblas_handle          handle,
                                     rocblas_int             n,
                                     rocblas_double_complex* x,
                                     rocblas_int             incx,
                                     rocblas_double_complex* y,
                                     rocblas_int             incy,
                                     const double*           c,
                                     const double*           s);
// rot_batched
rocblas_status rocblas_srot_batched_fortran(rocblas_handle handle,
                                            rocblas_int    n,
                                            float* const   x[],
                                            rocblas_int    incx,
                                            float* const   y[],
                                            rocblas_int    incy,
                                            const float*   c,
                                            const float*   s,
                                            rocblas_int    batch_count);
rocblas_status rocblas_drot_batched_fortran(rocblas_handle handle,
                                            rocblas_int    n,
                                            double* const  x[],
                                            rocblas_int    incx,
                                            double* const  y[],
                                            rocblas_int    incy,
                                            const double*  c,
                                            const double*  s,
                                            rocblas_int    batch_count);
rocblas_status rocblas_crot_batched_fortran(rocblas_handle               handle,
                                            rocblas_int                  n,
                                            rocblas_float_complex* const x[],
                                            rocblas_int                  incx,
                                            rocblas_float_complex* const y[],
                                            rocblas_int                  incy,
                                            const float*                 c,
                                            const rocblas_float_complex* s,
                                            rocblas_int                  batch_count);
rocblas_status rocblas_csrot_batched_fortran(rocblas_handle               handle,
                                             rocblas_int                  n,
                                             rocblas_float_complex* const x[],
                                             rocblas_int                  incx,
                                             rocblas_float_complex* const y[],
                                             rocblas_int                  incy,
                                             const float*                 c,
                                             const float*                 s,
                                             rocblas_int                  batch_count);